--- a/style.css
+++ b/style.css
@@ -1,8 +1,35 @@
-h1{
-    background: green;
-    color: #ddd;
+
+body{
+font-family: 'Poppins', sans-serif; ;
+margin: 0;
 }
-h2{
-    background: red;
-    color: #ddd;
+h1{
+    font-size: 50px;
+    
+}
+.orange{ 
+color: orange;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding: 2%;
+}
+.half-width img{
+    width: 80%;
+}
+.link{
+   background-image: linear-gradient(orange, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    font: 700;
+
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
