--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ color: orange;
 }
 section{
     display: flex;
+    margin-bottom: 100px;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 .half-width{
     width: 50%;
