--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ color: orange;
 }
 section{
     display: flex;
-    margin-bottom: 100px;
-}
+    margin-bottom: 100px;}
 .dream-big{
     background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
     background-position: right;
+    background-repeat: no-repeat;
 }
+
 .half-width{
     width: 50%;
     padding: 2%;
