--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@ h1{
     font-size: 50px;
     
 }
+h2{
+    font-size: 40px;
+}
 .orange{ 
 color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 100px;}
 .dream-big{
@@ -25,6 +28,7 @@ section{
 }
 .half-width img{
     width: 80%;
+    height: 70%;
 }
 .link{
    background-image: linear-gradient(orange, tomato);
@@ -33,9 +37,40 @@ section{
     text-decoration: none;
     color: white;
     font: 700;
+    
 
 }
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.experienc-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 8px;
+    
+
+}
+#md-saheb{
+   
+    border-left:  7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+
+}
+#md-ali{
+    border-left:  7px solid;
+    border-image: linear-gradient(purple,tomato);
+    border-image-slice: 1;
+}
+footer p {
+    text-align: center;
 }
